--- a/mcp-weather-webmvc-server/src/main/resources/application.properties
+++ b/mcp-weather-webmvc-server/src/main/resources/application.properties
@@ -9,5 +9,6 @@ spring.main.banner-mode=off
 
 spring.ai.mcp.server.name=mcp-simple-server
 spring.ai.mcp.server.version=0.0.1
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
 
 logging.file.name=./model-context-protocol/simple/mcp-weather-webmvc-server/target/mcp-simple-server.log
