--- a/mcp-sse-webflux-client/pom.xml
+++ b/mcp-sse-webflux-client/pom.xml
@@ -17,7 +17,7 @@
 
 	<properties>
 		<java.version>17</java.version>
-		<spring-ai.version>1.0.0-M7</spring-ai.version>
+		<spring-ai.version>1.0.0-M8</spring-ai.version>
 	</properties>
 
 	<dependencyManagement>
@@ -41,7 +41,12 @@
 
 		<dependency>
 			<groupId>org.springframework.ai</groupId>
-			<artifactId>spring-ai-starter-model-openai</artifactId>
+			<artifactId>spring-ai-starter-model-anthropic</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
 
 	</dependencies>
