--- a/mcp-sse-webflux-client/src/main/resources/application.properties
+++ b/mcp-sse-webflux-client/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=mcp
-spring.main.web-application-type=none
+server.port=8081
 
-spring.ai.openai.api-key=${OPENAI_API_KEY}
+spring.ai.anthropic.api-key=${ANTHROPIC_API_KEY}
 
 spring.ai.mcp.client.sse.connections.server1.url=http://localhost:8080
+spring.ai.mcp.client.type=ASYNC
 
 logging.level.io.modelcontextprotocol.client=WARN
 logging.level.io.modelcontextprotocol.spec=WARN
