Configure oauth2-client

--- a/mcp-sse-webflux-client/src/main/resources/application.properties
+++ b/mcp-sse-webflux-client/src/main/resources/application.properties
@@ -6,6 +6,11 @@ spring.ai.anthropic.api-key=${ANTHROPIC_API_KEY}
 spring.ai.mcp.client.sse.connections.server1.url=http://localhost:8080
 spring.ai.mcp.client.type=ASYNC
 
+spring.security.oauth2.client.registration.authserver.client-id=mcp-client
+spring.security.oauth2.client.registration.authserver.client-secret=mcp-secret
+spring.security.oauth2.client.registration.authserver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.provider.authserver.issuer-uri=http://localhost:9000
+
 logging.level.io.modelcontextprotocol.client=WARN
 logging.level.io.modelcontextprotocol.spec=WARN
 
