--- a/mcp-sse-webflux-client/pom.xml
+++ b/mcp-sse-webflux-client/pom.xml
@@ -49,6 +49,11 @@
 			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
