--- a/mcp-weather-webmvc-server/src/main/resources/application.properties
+++ b/mcp-weather-webmvc-server/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.main.banner-mode=off
 
 # spring.ai.mcp.server.stdio=false
 
+server.port=8090
 spring.ai.mcp.server.name=mcp-simple-server
 spring.ai.mcp.server.version=0.0.1
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
