--- a/mcp-sse-http-client/src/main/resources/application.properties
+++ b/mcp-sse-http-client/src/main/resources/application.properties
@@ -3,10 +3,22 @@ server.port=8081
 
 spring.ai.anthropic.api-key=${ANTHROPIC_API_KEY}
 
-spring.ai.mcp.client.sse.connections.server1.url=http://localhost:8080
+spring.ai.mcp.client.sse.connections.server1.url=http://localhost:8090
+spring.ai.mcp.client.type=SYNC
+
+# For obtaining tokens for calling the tool
 spring.security.oauth2.client.registration.authserver.client-id=mcp-client
 spring.security.oauth2.client.registration.authserver.client-secret=mcp-secret
-#spring.security.oauth2.client.registration.authserver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.authserver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.authserver.provider=authserver
+
+# For obtaining tokens for listing tools, initializing, etc
+spring.security.oauth2.client.registration.authserver-client-credentials.client-id=mcp-client
+spring.security.oauth2.client.registration.authserver-client-credentials.client-secret=mcp-secret
+spring.security.oauth2.client.registration.authserver-client-credentials.authorization-grant-type=client_credentials
+spring.security.oauth2.client.registration.authserver-client-credentials.provider=authserver
+
+# Authserver common config
 spring.security.oauth2.client.provider.authserver.issuer-uri=http://localhost:9000
 
 logging.level.io.modelcontextprotocol.client=WARN
