--- a/mcp-weather-webmvc-server/pom.xml
+++ b/mcp-weather-webmvc-server/pom.xml
@@ -18,12 +18,17 @@
     <name>Spring AI MCP Simple - Weather Server</name>
     <description>Sample Spring Boot application demonstrating MCP client and server sampling usage</description>
 
+    <properties>
+        <java.version>17</java.version>
+        <spring-ai.version>1.0.0</spring-ai.version>
+    </properties>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.springframework.ai</groupId>
                 <artifactId>spring-ai-bom</artifactId>
-                <version>1.0.0</version>
+                <version>${spring-ai.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
