Introduce mcp-sse-servlet-http-client

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 
 	<modules>		
 		<module>mcp-sse-servlet-webflux-client</module>
+		<module>mcp-sse-servlet-http-client</module>
 		<module>mcp-sse-webflux</module>
 		<module>mcp-weather-webmvc-server</module>
 		<module>authorization-server</module>
