--- a/mcp-sse-servlet-http-client/src/main/resources/application.properties
+++ b/mcp-sse-servlet-http-client/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=mcp
-server.port=8082
+server.port=8081
 
 spring.ai.anthropic.api-key=${ANTHROPIC_API_KEY}
 
 spring.ai.mcp.client.sse.connections.server1.url=http://localhost:8090
-spring.ai.mcp.client.type=ASYNC
+spring.ai.mcp.client.type=SYNC
 
 # For obtaining tokens for calling the tool
 spring.security.oauth2.client.registration.authserver.client-id=mcp-client
