--- a/mcp-sse-servlet-webflux-client/pom.xml
+++ b/mcp-sse-servlet-webflux-client/pom.xml
@@ -3,22 +3,16 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.4</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<groupId>wf.garnier.spring.ai.samples</groupId>
+		<artifactId>mcp-sample-parent</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<groupId>com.example</groupId>
+
 	<artifactId>mcp-sse-servlet-webflux-client</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<name>Spring AI - MCP Starter Default Client</name>
 	<description>Spring AI - MCP Starter Default Client</description>
-
-	<properties>
-		<java.version>17</java.version>
-		<spring-ai.version>1.0.0</spring-ai.version>
-	</properties>
 
 	<dependencyManagement>
 		<dependencies>
