--- a/mcp-sse-servlet-http-client/pom.xml
+++ b/mcp-sse-servlet-http-client/pom.xml
@@ -46,7 +46,7 @@
 		<dependency>
 			<groupId>io.modelcontextprotocol.sdk</groupId>
 			<artifactId>mcp</artifactId>
-			<version>0.11.0-SNAPSHOT</version>
+			<version>${mcp.version}</version>
 		</dependency>
 
 		<!-- TODO - direct deps? -->
