--- a/mcp-sse-webflux-http-client/pom.xml
+++ b/mcp-sse-webflux-http-client/pom.xml
@@ -51,7 +51,7 @@
 		<dependency>
 			<groupId>io.modelcontextprotocol.sdk</groupId>
 			<artifactId>mcp</artifactId>
-			<version>0.11.0-SNAPSHOT</version>
+			<version>${mcp.version}</version>
 		</dependency>
 
 	</dependencies>
