--- a/mcp-sse-webflux-http-client/pom.xml
+++ b/mcp-sse-webflux-http-client/pom.xml
@@ -54,6 +54,16 @@
 			<version>${mcp.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.projectreactor</groupId>
+			<artifactId>reactor-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
