--- a/pom.xml
+++ b/pom.xml
@@ -27,10 +27,12 @@
         <module>mcp-sse-webflux-http-client</module>
         <module>mcp-weather-webmvc-server</module>
         <module>authorization-server</module>
+        <module>../../modelcontextprotocol/java-sdk</module>
+        <module>../../spring-projects/spring-ai</module>
     </modules>
 
     <properties>
-        <spring-ai.version>1.0.0</spring-ai.version>
+        <spring-ai.version>1.1.0-SNAPSHOT</spring-ai.version>
         <mcp.version>0.11.0-SNAPSHOT</mcp.version>
         <java.version>17</java.version>
     </properties>
