Update to latest rebase of mcp/java-sdk

--- a/mcp-sse-webflux-http-client/src/main/resources/application.properties
+++ b/mcp-sse-webflux-http-client/src/main/resources/application.properties
@@ -23,6 +23,7 @@ spring.security.oauth2.client.provider.authserver.issuer-uri=http://localhost:90
 
 logging.level.io.modelcontextprotocol.client=WARN
 logging.level.io.modelcontextprotocol.spec=WARN
+logging.level.org.springframework.security=TRACE
 
 
 # spring.ai.mcp.client.toolcallback.enabled=false
