--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>mcp-sse-webflux</module>
         <module>mcp-sse-webflux-http-client</module>
         <module>mcp-weather-webmvc-server</module>
+        <module>mcp-weather-webflux-server</module>
         <module>authorization-server</module>
     </modules>
 
