--- a/mcp-weather-webflux-server/src/main/resources/application.properties
+++ b/mcp-weather-webflux-server/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.main.banner-mode=off
 
 server.port=8090
 spring.ai.mcp.server.name=mcp-simple-server
+spring.ai.mcp.server.type=async
 spring.ai.mcp.server.version=0.0.1
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
 
